# XBMind

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
config/: config.example.env  config.yaml
docs/: adding-tools.md  architecture.md  configuration.md  custom-tts-voice.md  custom-wake-word.md  hardware-tested.md  installation.md  troubleshooting.md
scripts/: download_models.sh  install.sh  setup_bluetooth.sh
site/: index.html  script.js  style.css
systemd/: xbmind.service
tests/: conftest.py  test_llm.py  test_orchestrator.py  test_stt.py  test_tools.py  test_tts.py  test_vad.py
xbmind/: __init__.py  config.py  main.py
xbmind/audio/: capture.py  player.py  vad.py
xbmind/bluetooth/: audio_sink.py  manager.py
xbmind/llm/: base.py  claude_api.py  gemini_api.py  memory.py  ollama.py  openai_api.py
xbmind/llm/tools/: base_tool.py  datetime_tool.py  shell_tool.py  timer.py  weather.py  wikipedia.py
xbmind/stt/: base.py  faster_whisper.py  google_cloud.py
xbmind/tts/: base.py  elevenlabs.py  piper.py
xbmind/utils/: chime.py  events.py  health.py  logger.py
xbmind/wake_word/: detector.py
